2003-10-08  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclTest.c (TestNumUtfCharsCmd): Command to allow finer
	access to Tcl_NumUtfChars for testing.
	* generic/tclUtf.c (Tcl_NumUtfChars): Corrected string length
	determining when the length parameter is negative; the terminator
	is a zero byte, not (necessarily) a \u0000 character. [Bug 769812]

2003-10-07  Don Porter  <dgp@users.sourceforge.net>

	* tests/cmdAH.test:
        * tests/exec.test:              Corrected temporary file management
        * tests/fileSystem.test:        issues uncovered by -debug 1 test
        * tests/io.test:                operations.  Also backported some
        * tests/ioCmd.test:             other fixes from the HEAD.
	* tests/main.test:
        * tests/pid.test:               [Bugs 675605, 675655, 675659]
        * tests/socket.test:
        * tests/source.test:

        * tests/fCmd.test:      Run tests with the [temporaryDirectory] as
        the current directory, so that tests can depend on ability to write
        files.  [Bug 575837]

        * doc/OpenFileChnl.3:   Updated Tcl_Tell and Tcl_Seek documentation
        to reflect that they now return Tcl_WideInt (TIP 72) [Bug 787537]

        * tests/io.test:        Corrected several tests that failed when paths
        * tests/ioCmd.test:     included regexp-special chars. [Bug 775394]

2003-10-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure:
	* win/tcl.m4: removed incorrect checks for existence of
	optimization.  TCL_CFG_OPTIMIZED is now defined whenever the user
	does not build with --enable-symbols.

2003-10-06  Don Porter  <dgp@users.sourceforge.net>

        * tests/regexp.test:            Matched [makeFile] with [removeFile].
        * tests/regexpComp.test:        [Bug 675652]

	* tests/fCmd.test (fCmd-8.2):	Test only that tilde-substitution
	happens, not for any particular result. [Bug 685991]

        * unix/tcl.m4 (SC_PATH_TCLCONFIG):      Corrected search path so