@@ -1,3 +1,11 @@
+2003-10-08  Don Porter  <dgp@users.sourceforge.net>
+
+        * generic/tclBasic.c:   Save and restore the iPtr->flag bits that
+        control the state of errorCode and errorInfo management when calling
+        "leave" execution traces, so that all error information of the traced
+        command is still available whether traced or not.  [Bug 760947]
+        Thanks to Yahalom Emet.
+
 2003-10-08  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* generic/tclTest.c (TestNumUtfCharsCmd): Command to allow finer
